Fix focus ring getting cut off

--- a/express/code/blocks/verb-dropzone/verb-dropzone.css
+++ b/express/code/blocks/verb-dropzone/verb-dropzone.css
@@ -8,7 +8,6 @@
 
   position: relative;
   padding: 0 var(--spacing-300) 24px;
-  overflow: hidden;
   box-sizing: border-box;
 }
 
